[tool.poetry]
name = "prompt-please"
version = "0.1.0"
description = "Prompt Engineering Ramp up"
authors = ["Aritra Ghosh <aritra119.26@gmail.com>"]
readme = "README.md"
packages = [{ include = "prompt_please" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.7.0"
python-docx = "^1.1.0"
tiktoken = "^0.5.2"
scikit-learn = "^1.3.2"
pydantic = "1.10.13"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.11"
bs4 = "^0.0.1"
psycopg = "^3.1.17"
pgvector = "^0.2.4"
psycopg2-binary = "^2.9.9"
flask = "^3.0.0"
flask-requests = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
